# aoc2022

./: aoc2022.cabal
.github/workflows/: haskell.yml
app/: Main.hs  ParseLetters.hs
input/: alphabet
