cabal-version:      2.4
name:               aoc2022
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Sander
maintainer:         s.a.t.hageman@students.uu.nl

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable aoc2022
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    ParseLetters

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base, split, containers, mtl
    hs-source-dirs:   app
    default-language: Haskell2010
